# bitcoin

./: .gitignore  Makefile.am  README.md  configure.ac  direct.smart
@/: variant.smart
qa/pull-tester/: .gitignore  rpc-tests.py
qa/rpc-tests/test_framework/: test_framework.py  util.py
src/: .gitignore  Makefile.am  addrman.cpp  addrman.h  base58.cpp  base58.h  bitcoind.cpp  build.smart  chain.cpp  chainparams.cpp  client.smart  coins.cpp  coins.h  common.smart  consensus.smart  core_read.cpp  core_write.cpp  main.cpp  miner.cpp  net.cpp  net.h  net_processing.cpp  netaddress.cpp  netaddress.h  rpcmining.cpp  server.smart  tx.smart  util.cpp  util.h  util.smart  validation.cpp  validation.h  validationinterface.cpp  validationinterface.h  wallet.smart
src/consensus/: consensus.h
src/crypto/: build.smart
src/evm/: Makefile.am
src/evm/include/dev/: BuildInfo.h
src/evm/libevm/: VM.cpp
src/evm/libevmjit/: BuildInfo.gen.h
src/leveldb/: build.smart
src/leveldb/helpers/memenv/: build.smart
src/policy/: policy.h
src/rpc/: client.cpp  mining.cpp
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sign.cpp  standard.cpp  standard.h
src/secp256k1/: build.smart
src/test/: Checkpoints_tests.cpp  checkblock_tests.cpp  key_tests.cpp  miner_tests.cpp  pow_tests.cpp  versionbits_tests.cpp
src/test/data/: alertTests.raw
src/univalue/: build.smart
src/wallet/: wallet_ismine.cpp
